<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home_string"
            android:checked="true"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_restaurants"
            android:title="@string/restaurants_string"
            android:icon="@drawable/ic_restaurant"/>
        <item
            android:id="@+id/nav_shopping"
            android:title="@string/shopping_string"
            android:icon="@drawable/ic_shopping"/>
        <item
            android:id="@+id/nav_museums"
            android:title="@string/museums_string"
            android:icon="@drawable/ic_museum"/>
        <item
            android:id="@+id/nav_other"
            android:title="@string/other_string"
            android:icon="@drawable/ic_other"/>
    </group>
</menu>